--- a/estudo_decision_tree_census.ipynb
+++ b/estudo_decision_tree_census.ipynb
@@ -14,7 +14,7 @@
     "- Não precisa normalização ou padronização\n",
     "- Simplicidade de interpretação\n",
     "- Rápido para classificar novos registros\n",
-    "-  <h3>Desvantagem </h3>\n",
+    "-  <h3>Desvantagens </h3>\n",
     "- Geração de árvores muito complexas\n",
     "- Pequenas mudanças nos dados pode mudar a árvore (poda pode ajudar)\n",
     "- Problema NP-completo para construir a árvore"
