--- a/estudo_decision_tree_census.ipynb
+++ b/estudo_decision_tree_census.ipynb
@@ -845,7 +845,7 @@
     "- Precisão: 0.8046 - Naive Bayes com: LabelEncoder + StandardScale (Parcial)\n",
     "\n",
     "<h3>Link do Notebook dos testes do  Algoritmo Naive Bayes</h3>\n",
-    "<a href=\"Resultados do Algoritmo Naive Bayes\">https://github.com/charlessodre/Charles_Estudo_Algoritmo_Naive_Bayes_Census</a>"
+    "<a href=\"https://github.com/charlessodre/Charles_Estudo_Algoritmo_Naive_Bayes_Census\">Resultados do Algoritmo Naive Bayes</a>"
    ]
   },
   {
