--- a/estudo_decision_tree_census.ipynb
+++ b/estudo_decision_tree_census.ipynb
@@ -394,10 +394,11 @@
        "array([[39, ' State-gov', 77516, ..., 0, 40, ' United-States'],\n",
        "       [50, ' Self-emp-not-inc', 83311, ..., 0, 13, ' United-States'],\n",
        "       [38, ' Private', 215646, ..., 0, 40, ' United-States'],\n",
-       "       ..., \n",
+       "       ...,\n",
        "       [58, ' Private', 151910, ..., 0, 40, ' United-States'],\n",
        "       [22, ' Private', 201490, ..., 0, 20, ' United-States'],\n",
-       "       [52, ' Self-emp-inc', 287927, ..., 0, 40, ' United-States']], dtype=object)"
+       "       [52, ' Self-emp-inc', 287927, ..., 0, 40, ' United-States']],\n",
+       "      dtype=object)"
       ]
      },
      "execution_count": 6,
@@ -433,7 +434,7 @@
        "array([[39, 7, 77516, ..., 0, 40, 39],\n",
        "       [50, 6, 83311, ..., 0, 13, 39],\n",
        "       [38, 4, 215646, ..., 0, 40, 39],\n",
-       "       ..., \n",
+       "       ...,\n",
        "       [58, 4, 151910, ..., 0, 40, 39],\n",
        "       [22, 4, 201490, ..., 0, 20, 39],\n",
        "       [52, 5, 287927, ..., 0, 40, 39]], dtype=object)"
@@ -468,13 +469,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.,  0.,  0., ...,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  1.,  0.,  0.],\n",
-       "       ..., \n",
-       "       [ 0.,  0.,  0., ...,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  1.,  0.,  0.]])"
+       "array([[0., 0., 0., ..., 1., 0., 0.],\n",
+       "       [0., 0., 0., ..., 1., 0., 0.],\n",
+       "       [0., 0., 0., ..., 1., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 1., 0., 0.],\n",
+       "       [0., 0., 0., ..., 1., 0., 0.],\n",
+       "       [0., 0., 0., ..., 1., 0., 0.]])"
       ]
      },
      "execution_count": 9,
@@ -495,38 +496,42 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# StandardScaler para colocar todos os valores na mesma escala (escalonamento).\n",
     "# Teste do escalonamente de todos atributos, também não tivemos melhoria no modelo. Tivemos o mesma Acurácia de 81.08%. Por isso, vamos deixar ele dasabilitado.\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "previsores = scaler.fit_transform(previsores)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# StandardScaler para colocar todos os valores na mesma escala (escalonamento).\n",
-    "# Teste do escalonamente somente dos atributos inteiros, também não tivemos melhoria no modelo. Tivemos o mesma Acurácia de 81.07%. Por isso, vamos deixar ele dasabilitado também . \n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "previsores[:,0] =  scaler.fit_transform(previsores[:,0].reshape(-1,1)).ravel()\n",
-    "previsores[:,2] =  scaler.fit_transform(previsores[:,2].reshape(-1,1)).ravel()\n",
-    "previsores[:,4] =  scaler.fit_transform(previsores[:,4].reshape(-1,1)).ravel()\n",
-    "previsores[:,10] =  scaler.fit_transform(previsores[:,10].reshape(-1,1)).ravel()\n",
-    "previsores[:,11] =  scaler.fit_transform(previsores[:,11].reshape(-1,1)).ravel()\n",
-    "previsores[:,12] =  scaler.fit_transform(previsores[:,12].reshape(-1,1)).ravel()\n"
+    "#from sklearn.preprocessing import StandardScaler\n",
+    "#scaler = StandardScaler()\n",
+    "#previsores = scaler.fit_transform(previsores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# StandardScaler para colocar todos os valores na mesma escala (escalonamento).\n",
+    "# Teste do escalonamente somente dos atributos inteiros, também não tivemos melhoria no modelo. Tivemos o mesma Acurácia de 81.07%. Por isso, vamos deixar ele dasabilitado também . \n",
+    "\n",
+    "#from sklearn.preprocessing import StandardScaler\n",
+    "#scaler = StandardScaler()\n",
+    "\n",
+    "#previsores[:,0] =  scaler.fit_transform(previsores[:,0].reshape(-1,1)).ravel()\n",
+    "#previsores[:,2] =  scaler.fit_transform(previsores[:,2].reshape(-1,1)).ravel()\n",
+    "#previsores[:,4] =  scaler.fit_transform(previsores[:,4].reshape(-1,1)).ravel()\n",
+    "#previsores[:,10] =  scaler.fit_transform(previsores[:,10].reshape(-1,1)).ravel()\n",
+    "#previsores[:,11] =  scaler.fit_transform(previsores[:,11].reshape(-1,1)).ravel()\n",
+    "#previsores[:,12] =  scaler.fit_transform(previsores[:,12].reshape(-1,1)).ravel()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +563,7 @@
        "                       random_state=0, splitter='best')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +714,7 @@
        "1   756  1226"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +797,7 @@
        "True                   6888         6888"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,9 +886,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
